{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 40,
  "lineage": "c30b1058-1dee-25b5-8852-f6b699bc4ae2",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-31T07:34:23.632-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/demos-294118/global/firewalls/http-firewall-demo",
            "log_config": [],
            "name": "http-firewall-demo",
            "network": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/networks/net-demo",
            "priority": 1000,
            "project": "demos-294118",
            "self_link": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/firewalls/http-firewall-demo",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-31T07:34:23.487-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/demos-294118/global/firewalls/https-firewall-demo",
            "log_config": [],
            "name": "https-firewall-demo",
            "network": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/networks/net-demo",
            "priority": 1000,
            "project": "demos-294118",
            "self_link": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/firewalls/https-firewall-demo",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-10-31T07:34:23.290-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/demos-294118/global/firewalls/icmp-firewall-demo",
            "log_config": [],
            "name": "icmp-firewall-demo",
            "network": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/networks/net-demo",
            "priority": 1000,
            "project": "demos-294118",
            "self_link": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/firewalls/icmp-firewall-demo",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "icmp"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "icmp"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-10-31T07:34:23.285-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/demos-294118/global/firewalls/ssh-firewall-demo",
            "log_config": [],
            "name": "ssh-firewall-demo",
            "network": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/networks/net-demo",
            "priority": 1000,
            "project": "demos-294118",
            "self_link": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/firewalls/ssh-firewall-demo",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "ssh"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/demos-294118/global/networks/net-demo",
            "mtu": 0,
            "name": "net-demo",
            "project": "demos-294118",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/networks/net-demo"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-31T07:34:23.366-07:00",
            "id": "projects/demos-294118/regions/us-central1/routers/outbound-router",
            "name": "outbound-router",
            "network": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/networks/net-demo",
            "project": "demos-294118",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/demos-294118/regions/us-central1/routers/outbound-router"
          },
          "dependencies": [
            "google_compute_network.net"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "demos-294118/us-central1/outbound-router/nat-demo",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "nat-demo",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "demos-294118",
            "region": "us-central1",
            "router": "outbound-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.net",
            "google_compute_router.router",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-10-31T07:34:23.470-07:00",
            "gateway_address": "10.211.0.1",
            "id": "projects/demos-294118/regions/us-central1/subnetworks/subnet-demo",
            "ip_cidr_range": "10.211.0.0/16",
            "name": "subnet-demo",
            "network": "https://www.googleapis.com/compute/v1/projects/demos-294118/global/networks/net-demo",
            "private_ip_google_access": true,
            "project": "demos-294118",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/demos-294118/regions/us-central1/subnetworks/subnet-demo"
          },
          "dependencies": [
            "google_compute_network.net"
          ]
        }
      ]
    }
  ]
}